[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/WinMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Roboto/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = SubResource( 1 )

[node name="WinMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 500 )
color = Color( 0, 0.0431373, 0.0156863, 0.705882 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -298.737
margin_right = 400.0
margin_bottom = 301.263

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 226.0
margin_top = 180.0
margin_right = 573.0
margin_bottom = 419.0

[node name="YouWinLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 347.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "YOU WIN!"
align = 1
uppercase = true

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 347.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 44 )
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 347.0
margin_bottom = 191.0
rect_min_size = Vector2( 0, 44 )
text = "BACK TO MAIN MENU"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 347.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 44 )
text = "QUIT"
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
